--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
 
-            Return to <a href="https://lmddgtfy.net/">Let Me DuckDuckGo That For You</a>
+            Return to <a href="https://lmddgtfy.oelrichsgarcia.de/">Let Me DuckDuckGo That For You</a>
 
         </div>
     </body>
