--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@
       <section class="contact-section">
         <h2>Contact</h2>
         <article>
-            <!-- Please e-mail <a href="mailto:webmaster@lmddgtfy.net">webmaster@lmddgtfy.net</a> to contact LMDDGTFY, or you can reach us on Twitter at <a href="https://twitter.com/lmddgtfynet" target="_blank">@lmddgtfynet</a>. -->
-            <span class="italics">E-mail</span><br /><a href="mailto:webmaster@lmddgtfy.net">webmaster@lmddgtfy.net</a>
+            <!-- Please e-mail <a href="mailto:webmaster@lmddgtfy.oelrichsgarcia.de">webmaster@lmddgtfy.oelrichsgarcia.de</a> to contact LMDDGTFY, or you can reach us on Twitter at <a href="https://twitter.com/lmddgtfynet" target="_blank">@lmddgtfynet</a>. -->
+            <span class="italics">E-mail</span><br /><a href="mailto:webmaster@lmddgtfy.oelrichsgarcia.de">webmaster@lmddgtfy.oelrichsgarcia.de</a>
             <br /><br />
             <span class="italics">Twitter</span><br /><a href="https://twitter.com/lmddgtfynet" target="_blank">@lmddgtfynet</a>
         </article>
